--- a/client/views/partials/receipts/receiptReceived.html
+++ b/client/views/partials/receipts/receiptReceived.html
@@ -1,84 +1,93 @@
-<div class="main-right col-xs-12" ng-controller="receiptCtrl" ng-init="getReceiptCount();">
+<div class="main-right col-xs-12" ng-controller="receiptCtrl">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-2 pall-zero"><h3>Receipts</h3></div>
         <ul class="col-sm-10 pall-zero list-inline">
-                <li class="col-sm-3 pall-zero">
-                    <date-picker ng-model="filters.fromDate" class="'paymentscontrol'"
-                                 past-present="'pastPresentDate'" placeholder="'from date'"></date-picker>
-                </li>
-                <li class="col-sm-3 pall-zero">
-                    <date-picker class="'paymentscontrol'"  past-present="'pastPresentDate'" placeholder="'to date'"
-                                 ng-model="filters.toDate"></date-picker>
-                </li>
-                <li class="col-sm-1 pall-zero">
-                    <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
-                        <i class="fa fa-search sear" aria-hidden="true"></i>
-                    </button>
-                </li>
             <li class="col-sm-3 pall-zero">
-                    <div class="select-box erp-box">
-                        <ui-select ng-model="partyName" theme="select2"
-                                   title="Choose a person" append-to-body="true"
-                                   ng-change="searchByPartyName(partyName.name);">
-                            <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
-                                {{$select.selected.name || name}}
-                            </ui-select-match>
-                            <ui-select-choices
-                                    repeat="parties in partiesList | propsFilter: {name: $select.search}">
-                                <div ng-bind-html="parties.name | highlight: $select.search"></div>
-                            </ui-select-choices>
-                        </ui-select>
-                    </div>
-                </li>
-                <li class="col-sm-1">
-                    <button type="button" ng-click="shareDetailsViaEmail()"
-                            class="btn mailImage"><img src="images/Reports_Mail.png">
-                    </button>
-                </li>
-                <li class="col-sm-1">
-                    <button type="button" ng-click="downloadDetails();" class="btn mailImage">
-                        <img src="images/Reports_Download.png"></button>
-                </li>
-            </ul>
+                <date-picker ng-model="fromDate" class="'paymentscontrol'"
+                             past-present="'pastPresentDate'" placeholder="'from date'"></date-picker>
+            </li>
+            <li class="col-sm-3 pall-zero">
+                <date-picker class="'paymentscontrol'" past-present="'pastPresentDate'" ng-model="toDate"
+                             placeholder="'to date'" ></date-picker>
+            </li>
+            <li class="col-sm-1 pall-zero">
+                <button type="submit" ng-click="searchByPartyName(partyName1);" class="btn go">
+                    <i class="fa fa-search sear" aria-hidden="true"></i>
+                </button>
+            </li>
+            <li class="col-sm-3 pall-zero">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="partyName" theme="select2"
+                               title="Choose a person" append-to-body="true"
+                               ng-change="searchByPartyName(partyName.name);">
+                        <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
+                            {{$select.selected.name || name}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="parties in partiesList | propsFilter: {name: $select.search}">
+                            <div ng-bind-html="parties.name | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="shareDetailsViaEmail()"
+                        class="btn mailImage"><img src="images/Reports_Mail.png">
+                </button>
+            </li>
+            <li class="col-sm-1">
+                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                    <img src="images/Reports_Download.png"></button>
+            </li>
         </ul>
-
     </div>
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="receiptParams">
-        <tr ng-repeat="receipts in currentPageOfReceipts" style="text-align: center;">
-            <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ receipts.date |
+        <tr ng-repeat="receipt in currentPageOfReceipts" style="text-align: center;">
+            <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ receipt.date |
                 date:'dd-MM-yyyy'}}
             </td>
-            <td data-title="'Party'" sortable="'name'" class="clickable-item">{{
-                receipts.partyId.name }}
+            <td data-title="'Party'" sortable="'partyName'" class="clickable-item">{{
+                receipt.attrs.partyName }}
             </td>
             <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{
-                receipts.amount }}
+                receipt.amount }}
+            </td>
+            <td data-title="'Payment Type'" sortable="'paymentType'" class="clickable-item">{{
+                receipt.paymentType}}
+            </td>
+            <td data-title="'Payment Ref No'" sortable="'paymentRefNo'" class="clickable-item">{{
+                receipt.paymentRefNo || '---' }}
             </td>
             <td data-title="'Description'" sortable="'description'" class="clickable-item">{{
-                receipts.description || '---'}}
+                receipt.description || '---'}}
             </td>
-            <td data-title="'Created By'" sortable="'firstName'"
-                class="clickable-item">{{ receipts.createdBy.firstName }}
+            <td data-title="'Created By'" sortable="'createdByName'"
+                class="clickable-item">{{ receipt.attrs.createdByName }}
             </td>
 
             <td data-title="'Action'" class="">
-                <a href="#" class="btn" ng-click="goToEditReceiptsPage(receipts._id)">
+                <a href="#" ng-show="userType=='account' || userId==receipt.createdBy" class="btn"
+                   ng-click="goToEditReceiptsPage(receipt._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" class="btn" ng-click="deleteReceipt(receipts._id)">
+
+                <a href="#" ng-show="userType=='account' || userId==receipt.createdBy" class="btn"
+                   ng-click="deletePaymentsRecord(receipt._id)">
+
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
         </tr>
         <tr ng-if="!currentPageOfReceipts || currentPageOfReceipts.length === 0">
-            <td colspan="6">No Receipts Records exist.</td>
+            <td colspan="8">No Receipt Records exist.</td>
         </tr>
     </table>
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ui-sref="receiptEdit">
-                <img src="images/Add_Payments.png" alt="Add Receipt"
-                     title="Add Receipt"></a>
+            <a href="#" ng-click="goToEditReceiptsPage()"><img src="images/Add_Payments.png" alt="Add Receipt"
+                                                               title="Add Payment"></a>
         </figure>
     </div>
 </div>
+</div>
+
