Payments module changed to Receipts

--- a/client/views/partials/receipts/receiptEdit.html
+++ b/client/views/partials/receipts/receiptEdit.html
@@ -51,7 +51,7 @@
                 <div class="form-group col-xs-12"
                      ng-show="receiptDetails.paymentType == 'NEFT' || receiptDetails.paymentType == 'Cheque'">
                     <div class="col-xs-12">
-                        <input type="text" class="form-control" ng-model="receiptDetails.paymentRefNo" placeholder="Reference Number for Cheque/NEFT"/>
+                        <input type="text" class="form-control" ng-model="receiptDetails.receiptRefNo" placeholder="Reference Number for Cheque/NEFT"/>
 
                     </div>
                 </div>
