--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -5,13 +5,13 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
                     <div class="">
-                        <date-picker id="date" ban-future="'banFutureDate'" ng-model="receiptDetails.date"
+                        <date-picker id="date" ban-future="'banFutureDate'" ng-model="paymentDetails.date"
                                      placeholder="'Date*'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class=" select-box">
-                        <ui-select ng-model="receiptDetails.partyId" theme="select2"
+                        <ui-select ng-model="paymentDetails.partyId" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a Party" append-to-body="true">
                             <ui-select-match placeholder="Select a Party*" class="form-control custom-form-control">
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
                     <div class=" styling-input-list">
-                        <input ng-model="receiptDetails.amount" type="number" class="form-control custom-form-control"
+                        <input ng-model="paymentDetails.amount" type="number" class="form-control custom-form-control"
                                id="amount">
                         <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
 
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class=" styling-input-list">
-                        <textarea ng-model="receiptDetails.description" type="textarea"
+                        <textarea ng-model="paymentDetails.description" type="textarea"
                                   class="form-control custom-form-control"
                                   id="description"></textarea>
                         <label class="focus-effect-for-input" aria-hidden="true">Remarks</label>
@@ -48,21 +48,21 @@
             <div class="clearfix"></div>
 
             <div class="col-xs-6 col-xs-push-3">
-                <div class="alert alert-danger" role="alert" ng-show="receiptDetails.error.length">
+                <div class="alert alert-danger" role="alert" ng-show="paymentDetails.error.length">
                     <ul>
-                        <li ng-repeat="error in receiptDetails.error">{{error}}</li>
+                        <li ng-repeat="error in paymentDetails.error">{{error}}</li>
                     </ul>
                 </div>
-                <div class="alert alert-success" role="alert" ng-show="receiptDetails.success.length">
+                <div class="alert alert-success" role="alert" ng-show="paymentDetails.success.length">
                     <ul>
-                        <li ng-repeat="success in receiptDetails.success">{{success}}</li>
+                        <li ng-repeat="success in paymentDetails.success">{{success}}</li>
                     </ul>
                 </div>
             </div>
             <div class="col-xs-12">
                 <div class="col-xs-4 mtb-25 sub-can">
                     <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
-                    <button type="submit" class="btn can last" ng-click="AddorUpdateReceipt()">Submit</button>
+                    <button type="submit" class="btn can last" ng-click="AddorUpdatePayment()">Submit</button>
 
                 </div>
             </div>
