--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -1,4 +1,4 @@
-<div class="main-right col-xs-12" ng-controller="paymentsCtrl" ng-init="getReceiptCount();">
+<div class="main-right col-xs-12" ng-controller="paymentsCtrl" ng-init="getPaymentCount();">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-2 pall-zero"><h3>Payments</h3></div>
         <ul class="col-sm-10 pall-zero list-inline">
@@ -41,7 +41,7 @@
             </li>
         </ul>
     </div>
-    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="receiptParams">
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentParams">
         <tr ng-repeat="payment in currentPageOfPayments" style="text-align: center;">
             <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ payment.date |
                 date:'dd-MM-yyyy'}}
@@ -60,9 +60,9 @@
             </td>
 
             <td data-title="'Action'" class="">
-                <a href="#" class="btn" ng-click="goToEditReceiptsPage(receipts._id)">
+                <a href="#" class="btn" ng-click="goToEditPaymentsPage(payment._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" class="btn" ng-click="deleteReceipt(receipts._id)">
+                <a href="#" class="btn" ng-click="deletePayment(payment._id)">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
             </td>
@@ -73,8 +73,8 @@
     </table>
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ui-sref="receiptEdit">
-                <img src="images/Add_Payments.png" alt="Add Receipt"
+            <a href="#" ui-sref="paymentsEdit">
+                <img src="images/Add_Payments.png" alt="Add Payment"
                      title="Add Receipt"></a>
         </figure>
     </div>
