changed payment reports

--- a/client/views/partials/reports/payableByParty.html
+++ b/client/views/partials/reports/payableByParty.html
@@ -189,7 +189,7 @@
                     <th colspan="2">Total</th>
                     <th>{{gross.totalAmount}}</th>
                     <th>{{gross.paidAmount}}</th>
-                    <th>{{gross.payableAmount}}</th>
+                    <th>{{gross.dueAmount}}</th>
                 </tr>
                 </tfoot>
             </table>
