--- a/client/views/partials/reports/payableByPartyName.html
+++ b/client/views/partials/reports/payableByPartyName.html
@@ -130,10 +130,9 @@
                            cellspacing="0" width="100%">
                         <tfoot>
                         <tr>
-                            <th colspan="2">Total</th>
-                            <th>{{grossAmounts.totalAmount}}</th>
-                            <th>{{grossAmounts.paidAmount}}</th>
-                            <th>{{grossAmounts.payableAmount}}</th>
+                            <th >Total</th>
+                            <th>{{totalAmount}}</th>
+                            <th></th>
                         </tr>
                         </tfoot>
                     </table>
