New changes done

--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -87,20 +87,34 @@
                             <span class="red"> No Results Found </span>
                         </div>
                     </div>
+                 <!--   <div class="select-box styling-input-list">
+                        <ui-select ng-model="partyName" theme="select2"
+                                   style="min-width: 390px;"
+                                   title="Choose a Supplier" append-to-body="true">
+                            <ui-select-match class="form-control custom-form-control">
+                                {{$select.selected.name || name}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="party in partyBySupplier | propsFilter: {name: $select.search}">
+                                <div ng-bind-html="party.name | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                        <label class="focus-effect-for-input">Select a Supplier*</label>
+                    </div>-->
                 </div>
                     <div class="form-group col-xs-12">
                         <div class=" styling-input-list">
                             <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
-                            <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
+                            <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
                         </div>
                     </div>
-                    <div class="form-group col-xs-12">
+                  <!--  <div class="form-group col-xs-12">
                         <div class="col-xs-12 styling-input-list">
                             <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.paidAmount"/>
                             <label class="focus-effect-for-input" aria-hidden="true">Paid Amount*</label>
 
                         </div>
-                    </div>
+                    </div>-->
                 </div>
 
 
