--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -45,11 +45,15 @@
     </div>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
         <tr ng-repeat="maintanence in currentPageOfMaintanence" style="text-align: center;">
+            {{maintanence}}
             <td data-title="'Date'" sortable="'date'" class="clickable-item">{{ maintanence.date |
                 date:'dd-MM-yyyy'}}
             </td>
             <td data-title="'Vehicle No'" sortable="'truckName'" class="clickable-item">{{
                 maintanence.attrs.truckName}}
+            </td>
+            <td data-title="'Supplier Name'" sortable="'expenseName'" class="clickable-item">{{
+                maintanence.partyId.name }}
             </td>
             <td data-title="'Expense Type'" sortable="'expenseName'" class="clickable-item">{{
                 maintanence.attrs.expenseName }}
