--- a/client/views/partials/reports/payableByPartyName.html
+++ b/client/views/partials/reports/payableByPartyName.html
@@ -132,6 +132,8 @@
                         <tr>
                             <th >Total</th>
                             <th>{{totalAmount}}</th>
+                            <th>{{totalPaid}}</th>
+                            <th></th>
                             <th></th>
                         </tr>
                         </tfoot>
