--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -75,7 +75,7 @@
                 </div>
                 <div ng-show="expenseDetails.mode == 'Credit'">
                 <div class="form-group col-xs-12">
-                    <div class="">
+            <!--        <div class="">
                         <input type="text" ng-model="partyName"
                                uib-typeahead="party.name for party in partyBySupplier | filter:$viewValue"
                                class="form-control custom-form-control" typeahead-min-length="1"
@@ -86,8 +86,8 @@
                             <i class="glyphicon glyphicon-remove red"></i>
                             <span class="red"> No Results Found </span>
                         </div>
-                    </div>
-                 <!--   <div class="select-box styling-input-list">
+                    </div>-->
+                    <div class="select-box styling-input-list">
                         <ui-select ng-model="partyName" theme="select2"
                                    style="min-width: 390px;"
                                    title="Choose a Supplier" append-to-body="true">
@@ -100,7 +100,7 @@
                             </ui-select-choices>
                         </ui-select>
                         <label class="focus-effect-for-input">Select a Supplier*</label>
-                    </div>-->
+                    </div>
                 </div>
                     <div class="form-group col-xs-12">
                         <div class=" styling-input-list">
@@ -108,13 +108,7 @@
                             <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
                         </div>
                     </div>
-                  <!--  <div class="form-group col-xs-12">
-                        <div class="col-xs-12 styling-input-list">
-                            <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.paidAmount"/>
-                            <label class="focus-effect-for-input" aria-hidden="true">Paid Amount*</label>
 
-                        </div>
-                    </div>-->
                 </div>
 
 
