--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -75,32 +75,29 @@
                 </div>
                 <div ng-show="expenseDetails.mode == 'Credit'">
                 <div class="form-group col-xs-12">
-                    <div class="">
-                        <input type="text" ng-model="partyName"
-                               uib-typeahead="party.name for party in partyBySupplier | filter:$viewValue"
-                               class="form-control custom-form-control" typeahead-min-length="1"
-                               typeahead-on-select="selectPartyId($item)"
-                               typeahead-select-on-exact="true"
-                               typeahead-no-results="noParty" autocomplete="false" placeholder="Party Name*">
-                        <div ng-show="noParty">
-                            <i class="glyphicon glyphicon-remove red"></i>
-                            <span class="red"> No Results Found </span>
-                        </div>
+
+                    <div class="select-box styling-input-list">
+                        <ui-select ng-model="partyName" theme="select2"
+                                   style="min-width: 390px;"
+                                   title="Choose a Supplier" append-to-body="true">
+                            <ui-select-match class="form-control custom-form-control">
+                                {{$select.selected.name || name}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="party in partyBySupplier | propsFilter: {name: $select.search}">
+                                <div ng-bind-html="party.name | highlight: $select.search"></div>
+                            </ui-select-choices>
+                        </ui-select>
+                        <label class="focus-effect-for-input">Select a Supplier*</label>
                     </div>
                 </div>
                     <div class="form-group col-xs-12">
                         <div class=" styling-input-list">
                             <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
-                            <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
+                            <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
                         </div>
                     </div>
-                    <div class="form-group col-xs-12">
-                        <div class="col-xs-12 styling-input-list">
-                            <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.paidAmount"/>
-                            <label class="focus-effect-for-input" aria-hidden="true">Paid Amount*</label>
 
-                        </div>
-                    </div>
                 </div>
 
 
