--- a/client/views/partials/reports/payableByPartyName.html
+++ b/client/views/partials/reports/payableByPartyName.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getPaybleAmountByPartyId()">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments">
+        <div class="reports-panel payments" ui-sref="reports">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -9,11 +9,11 @@
             <div class="reports-text">
                 <h3>Revenue</h3>
                 <p>From All Vehicles</p>
-                <!-- <small><i class="fa fa-inr"></i>
+                 <small><i class="fa fa-inr"></i>
                      {{totals.totalRevenue}}
-                 </small>-->
+                 </small>
             </div>
-            <div class="col-xs-12 pall-zero">
+         <!--   <div class="col-xs-12 pall-zero">
                 <ul class="list-inline">
                     <li class="payble" ui-sref="reports">
                         <span class="payable">By Trips</span><br>
@@ -29,7 +29,7 @@
                     </li>
 
                 </ul>
-            </div>
+            </div>-->
         </div>
     </div>
 
@@ -130,10 +130,11 @@
                            cellspacing="0" width="100%">
                         <tfoot>
                         <tr>
-                            <th colspan="2">Total</th>
-                            <th>{{grossAmounts.totalAmount}}</th>
-                            <th>{{grossAmounts.paidAmount}}</th>
-                            <th>{{grossAmounts.payableAmount}}</th>
+                            <th >Total</th>
+                            <th>{{totalAmount}}</th>
+                            <th>{{totalPaid}}</th>
+                            <th></th>
+                            <th></th>
                         </tr>
                         </tfoot>
                     </table>
